--- a/dashboards/sample.erb
+++ b/dashboards/sample.erb
@@ -2,6 +2,9 @@
 <div class="gridster">
   <ul>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="cat" data-view="Image" data-title="logo" data-image="/logo.png"></div>
+    </li>
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="welcome" data-view="Text" data-title="Hello" data-text="Pointless statistics dashboard." data-moreinfo="Protip: You can drag the widgets around!"></div>
     </li>
     
@@ -31,7 +34,7 @@
       <div data-id="danjohnson3141/reading_list" data-view="GithubStats" style="background-color:#95c10f; color: white !important"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
-      <div data-id="Evanta/EvantaAccessAPI" data-view="GithubStats" style="background-color:#8cd0f2; color: white !important"></div>
+      <div data-id="Evanta/EvantaAccessAPI" data-view="GithubStats" style="background-color:#8cd0f2;"></div>
     </li>
   </ul>
   <!-- <center><div style="font-size: 12px">Try this: curl -d '{ "auth_token": "YOUR_AUTH_TOKEN", "text": "Hey, Look what I can do!" }' \http://<%=request.host%>:<%=request.port%>/widgets/welcome</div></center> -->
