adds twitter and image widget

--- a/dashboards/sample.erb
+++ b/dashboards/sample.erb
@@ -5,11 +5,11 @@
       <div data-id="cat" data-view="Image" data-title="logo" data-image="/logo.png"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="welcome" data-view="Text" data-title="Hello" data-text="Pointless statistics dashboard." data-moreinfo="Protip: You can drag the widgets around!"></div>
+      <div data-id="welcome" data-view="Text" data-title="Welcome to Devnomicon" data-text="Pointless statistics dashboard." data-moreinfo="Protip: You can drag the widgets around!"></div>
     </li>
     
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="bathroom" data-view="Number" data-title="Bathroom Line" style="background-color:teal"></div>
+      <div data-id="bathroom" data-view="Number" data-title="Bathroom Queue" style="background-color:teal"></div>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
@@ -27,15 +27,17 @@
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
       <div data-id="convergence" data-view="Graph" data-title="Convergence" style="background-color:#ff9618"></div>
     </li>
-<!--     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="convergence" data-view="Image" data-title="Convergence" style="background-color:#ff9618"></div>
+
+    <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
+      <div data-id="twitter_mentions" data-view="Comments" style="background-color:#ff9618;" data-moreinfo="Tweets tagged with #todayilearned"></div>
+      <i class="icon-twitter icon-background"></i>
+    </li>
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="danjohnson3141/dashing" data-view="GithubStats" style="background-color:#95c10f;"></div>
+    </li>
+    <!-- <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="danjohnson3141/reading_list" data-view="GithubStats" style="background-color:#95c10f;"></div>
     </li> -->
-    <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
-      <div data-id="danjohnson3141/reading_list" data-view="GithubStats" style="background-color:#95c10f; color: white !important"></div>
-    </li>
-    <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
-      <div data-id="Evanta/EvantaAccessAPI" data-view="GithubStats" style="background-color:#8cd0f2;"></div>
-    </li>
   </ul>
   <!-- <center><div style="font-size: 12px">Try this: curl -d '{ "auth_token": "YOUR_AUTH_TOKEN", "text": "Hey, Look what I can do!" }' \http://<%=request.host%>:<%=request.port%>/widgets/welcome</div></center> -->
 </div>
