adds more buzzwords

--- a/dashboards/sample.erb
+++ b/dashboards/sample.erb
@@ -5,7 +5,7 @@
       <div data-id="cat" data-view="Image" data-title="logo" data-image="/logo.png"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="welcome" data-view="Text" data-title="Welcome to Devnomicon" data-text="Pointless statistics dashboard." data-moreinfo="Protip: You can drag the widgets around!"></div>
+      <div data-id="welcome" data-view="Text" data-title="Welcome to Devnomicon: A sample website by Dan Johnson" data-text="Pointless statistics dashboard." data-moreinfo="Protip: You can drag the widgets around!"></div>
     </li>
     
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
